<resources>

    <string name="app_name">HelloAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="name">John Hsu</string>
    <string name="program">BTech</string>
    <string name="course">INFO 3245</string>
    <string name="school">Kwantlen</string>
    <string name="id">100161247</string>

</resources>